--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -7,8 +7,7 @@
     ":pinVersions",
     "docker:pinDigests",
     ":rebaseStalePrs",
-    ":automergeMinor",
-    ":automergeDigest",
+    ":automerge",
     ":skipStatusChecks",
     "group:allNonMajor"
   ],
